--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -142,7 +142,7 @@
             <div class="col-lg-8 col-lg-offset-2">
                 <!-- To configure the contact form email address, go to mail/contact_me.php and update the email address in the PHP file on line 19. -->
                 <!-- The form should work on most web servers, but if the form is not working you may need to configure your web server differently. -->
-                <form th:if="${message} == null" name="sentMessage" id="contactForm" th:action="@{/}" th:object="${emailForm}" th:method="post">
+                <form th:if="${message} == null" name="sentMessage" id="contactForm" th:action="@{/}" th:object="${emailModel}" th:method="post">
                     <div class="row control-group">
                         <div class="form-group col-xs-12 floating-label-form-group controls">
                             <label for="name">Name</label>
